--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -2,8 +2,9 @@ FROM python:3.11-slim
 
 WORKDIR /api
 
-COPY ./requirements.txt ./requirements.txt
+COPY requirements.txt ./requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY ./api .
+COPY . .
+
 CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
