--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -4,3 +4,5 @@ djangorestframework==3.16.1
 sqlparse==0.5.3
 psycopg2-binary==2.9.11
 python-dotenv==1.0.1
+drf-spectacular==0.29.0
+requests==2.31.0
