--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,11 +10,16 @@ services:
       - "8000:8000"
     volumes:
       - ./api:/api
+    environment:
+      - PARSER_SERVICE_URL=http://nlp:8000
     env_file:
       - .env
+    command: 
+      bash -c "python manage.py makemigrations && 
+      python manage.py migrate &&
+      python manage.py runserver 0.0.0.0:8000"
     depends_on:
-      db:
-        condition: service_healthy
+      - db
 
   nlp_service:
     container_name: nlp
@@ -28,8 +33,8 @@ services:
     env_file:
       - .env
     depends_on:
-      db:
-        condition: service_healthy
+      - ollama
+      - db
 
   matching_service:
     container_name: matching-service
@@ -43,8 +48,7 @@ services:
     env_file:
       - .env
     depends_on:
-      db:
-        condition: service_healthy
+      - db
 
   db:
     container_name: db
@@ -61,5 +65,17 @@ services:
     volumes:
       - db_data:/var/lib/postgresql/data
 
+  ollama:
+    image: ollama/ollama:latest
+    container_name: ollama
+    ports:
+      - "11434:11434"
+    volumes:
+      - ollama_data:/root/.ollama
+      - ./ollama_entrypoint.sh:/entrypoint.sh
+    entrypoint: ["/usr/bin/bash", "/entrypoint.sh"]
+
+
 volumes:
   db_data:
+  ollama_data:
