created brokers. Made comunication between main_api and nlp_service

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -2,9 +2,10 @@ FROM python:3.11-slim
 
 WORKDIR /api
 
-COPY requirements.txt ./requirements.txt
+COPY api/requirements.txt ./requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . .
+COPY ./api .
+COPY ./broker /api/broker
 
 # CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
