--- a/matching_service/requirements.txt
+++ b/matching_service/requirements.txt
@@ -5,6 +5,7 @@ asgiref==3.11.0
 certifi==2025.11.12
 charset-normalizer==3.4.4
 click==8.3.1
+confluent-kafka==2.12.2
 Django==5.2.8
 django-rest-framework==0.1.0
 djangorestframework==3.16.1
