--- a/nlp_service/Dockerfile
+++ b/nlp_service/Dockerfile
@@ -2,8 +2,10 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-COPY requirements.txt .
+COPY ./nlp_service/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . .
+COPY ./nlp_service .
+COPY ./broker /app/broker
+
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
