--- a/nlp_service/requirements.txt
+++ b/nlp_service/requirements.txt
@@ -4,6 +4,7 @@ anyio==4.11.0
 certifi==2025.11.12
 charset-normalizer==3.4.4
 click==8.3.1
+confluent-kafka==2.12.2
 dnspython==2.8.0
 email-validator==2.3.0
 fastapi==0.121.3
