--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
+aiokafka==0.12.0
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.11.0
 asgiref==3.11.0
+async-timeout==5.0.1
 certifi==2025.11.12
 charset-normalizer==3.4.4
 click==8.3.1
+confluent-kafka==2.12.2
 Django==5.2.8
 django-rest-framework==0.1.0
 djangorestframework==3.16.1
@@ -23,6 +26,7 @@ idna==3.11
 Jinja2==3.1.6
 jsonpatch==1.33
 jsonpointer==3.0.0
+kafka-python==2.3.0
 langchain-core==1.0.7
 langchain-ollama==1.0.0
 langsmith==0.4.44
@@ -32,6 +36,8 @@ mdurl==0.1.2
 ollama==0.6.1
 orjson==3.11.4
 packaging==25.0
+psycopg==3.2.13
+psycopg2-binary==2.9.11
 pydantic==2.12.4
 pydantic_core==2.41.5
 Pygments==2.19.2
